# servidor_api_agente_de_pdf

./: README.md  deploy2.py  deploy4.py  pyproject.toml
tmp/chromadb/: chroma.sqlite3
