[project]
name = "04-deploy-com-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.2.6",
    "chromadb>=1.3.2",
    "fastapi>=0.121.0",
    "openai>=2.7.1",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
